--- a/interface.html
+++ b/interface.html
@@ -120,32 +120,26 @@ IP Address:
 <div class="container" id="gamepadDisplay"></div>
 </div>
 <script>
-$.ajaxSetup({timeout:500});
+$.ajaxSetup({timeout:1000});
 
 
-var MSG_dict = { s1h: 0.00,
-				 s1v: 0.00,
-				 s2h: 0.00,
-				 s2v: 0.00,
-				 b01: 0,
-				 b02: 0,
-				 b03: 0,
-				 b04: 0,
-				 b05: 0,
-				 b06: 0,
-				 b07: 0,
-				 b08: 0,
-				 b09: 0,
-				 b10: 0,
-				 b11: 0,
-				 b12: 0,
-				 b13: 0,
-				 b14: 0,
-				 b15: 0,
-				 b16: 0,
-				 b17: 0
+var MSG_dict = { s1h: 0.00, // float
+				 s1v: 0.00, // float
+				 s2h: 0.00, // float
+				 s2v: 0.00, // float
+				 btn: 00	// 16 buttons hex encoded
 };
 
+function hashCode(msg) {
+  var hash = 0, i, chr;
+  if (msg.length === 0) return hash;
+  for (i = 0; i < msg.length; i++) {
+    chr   = msg.charCodeAt(i);
+    hash  = ((hash << 5) + hash) + chr;
+    hash |= 0; // Convert to 32bit integer
+  }
+  return hash;
+};
 
 function sendCmd(cmd, value){	
 	TextVar = form.inputbox_IP.value;
@@ -158,8 +152,9 @@ function sendMsg(msg){
 	ArduinoVar = "http://" + TextVar + ":80";	
 	var msg_length = msg.length;
 	//console.log(msg);
+	//console.log(msg_length+";"+hashCode(msg)+";"+msg);  // slows down the browser, log get too big
 	//console.log(msg_length);
-	$.get( ArduinoVar, "msg:"+msg_length+":"+msg);
+	$.get( ArduinoVar, msg_length+";"+hashCode(msg)+";"+msg);
 	{Connection: close};
 }
 function showSliderValue(cmd) {
@@ -179,8 +174,48 @@ $(setSliderValue("90", 'sr1'));
 $(setSliderValue("90", 'sr2'));
 
 
-var hasGP = false;
-var repGP;
+// converts binary string to a hexadecimal string
+// returns an object with key 'valid' to a boolean value, indicating
+// if the string is a valid binary string.
+// If 'valid' is true, the converted hex string can be obtained by
+// the 'result' key of the returned object
+function binaryToHex(s) {
+    var i, k, part, accum, ret = '';
+    for (i = s.length-1; i >= 3; i -= 4) {
+        // extract out in substrings of 4 and convert to hex
+        part = s.substr(i+1-4, 4);
+        accum = 0;
+        for (k = 0; k < 4; k += 1) {
+            if (part[k] !== '0' && part[k] !== '1') {
+                // invalid character
+                return { valid: false };
+            }
+            // compute the length 4 substring
+            accum = accum * 2 + parseInt(part[k], 10);
+        }
+        if (accum >= 10) {
+            // 'A' to 'F'
+            ret = String.fromCharCode(accum - 10 + 'A'.charCodeAt(0)) + ret;
+        } else {
+            // '0' to '9'
+            ret = String(accum) + ret;
+        }
+    }
+    // remaining characters, i = 0, 1, or 2
+    if (i >= 0) {
+        accum = 0;
+        // convert from front
+        for (k = 0; k <= i; k += 1) {
+            if (s[k] !== '0' && s[k] !== '1') {
+                return { valid: false };
+            }
+            accum = accum * 2 + parseInt(s[k], 10);
+        }
+        // 3 bits, value cannot exceed 2^3 - 1 = 7, just convert
+        ret = String(accum) + ret;
+    }
+    return { valid: true, result: ret };
+}
 
 function canGame() {
 	return "getGamepads" in navigator;
@@ -191,16 +226,19 @@ function reportOnGamepad() {
 	var html = "";
 		html += "id: "+gp.id+"<br/>";
 
-	for(var i=0;i<gp.buttons.length;i++) {
-	    MSG_dict[Object.keys(MSG_dict)[gp.axes.length + i]] = 0;
+	var msg_btn = "";
+	for(var i=0;i<16;i++) {	   
 		html+= "Button "+(i+1)+": ";
 		if(gp.buttons[i].pressed){
-			MSG_dict[Object.keys(MSG_dict)[gp.axes.length + i]] = 1;
+			msg_btn += "1"
 			html+= " pressed";
+		}else{
+			msg_btn += "0"
 		}
 		html+= "<br/>";
 	}
-
+    MSG_dict["btn"] = binaryToHex(msg_btn).result;
+	
 	for(var i=0;i<gp.axes.length; i+=2) {
 		MSG_dict[Object.keys(MSG_dict)[i]] = Math.floor(gp.axes[i] * 100) / 100;
 		MSG_dict[Object.keys(MSG_dict)[i+1]] = Math.floor(gp.axes[i+1] * 100) / 100;
@@ -218,6 +256,8 @@ function reportOnGamepad() {
 	sendMsg(msg);
 } 
 
+var hasGP = false;
+var repGP;
 $(document).ready(function() {	 
 	if(canGame()) {
 		var prompt = "To begin using your gamepad, connect it and press any button!";
@@ -226,7 +266,7 @@ $(document).ready(function() {
 			hasGP = true;
 			$("#gamepadPrompt").html("Gamepad connected!");
 			console.log("connection event");
-			repGP = window.setInterval(reportOnGamepad,200);
+			repGP = window.setInterval(reportOnGamepad, 100);
 		});
 
 		$(window).on("gamepaddisconnected", function() {
